--- a/JobHistory.html
+++ b/JobHistory.html
@@ -26,7 +26,7 @@ padding: 0;
 <title>
 Job Experience
 </title>
-<A HREF="KaylaBennett.html" style="color:white"> <-- Home </A>
+<A HREF="index.html" style="color:white"> <-- Home </A>
 <h1>
 <center>
 <u>Job Experience</u>
