--- a/School.html
+++ b/School.html
@@ -16,7 +16,7 @@ color: DarkMagenta;
 <title>
 School
 </title>
-<A HREF="KaylaBennett.html" style="color:white"> <-- Home </A>
+<A HREF="index.html" style="color:white"> <-- Home </A>
 <h1>
 <center>
 <u>School History</u>
