--- a/skills.html
+++ b/skills.html
@@ -25,7 +25,7 @@ margin-left: 80px;
 <title>
 Skills
 </title>
-<A HREF="KaylaBennett.html" style="color:white"> <-- Home </A>
+<A HREF="index.html" style="color:white"> <-- Home </A>
 <h1>
 <center>
 <u>Skills</u>
